# stake-pool

./: Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: main.yml  publish-rust.yml
clients/cli/: Cargo.toml  README.md
clients/cli/scripts/: add-validators.sh  deposit.sh  rebalance.sh  setup-stake-pool-token-2022.sh  setup-stake-pool.sh  setup-test-validator.sh  withdraw.sh
clients/cli/src/: client.rs  main.rs  output.rs
clients/js-legacy/: README.md  package.json  pnpm-lock.yaml  rollup.config.mjs
clients/js-legacy/src/: codecs.ts  constants.ts  index.ts  instructions.ts  layouts.ts
clients/js-legacy/src/utils/: instruction.ts  math.ts  program-address.ts  stake.ts
clients/js-legacy/test/: calculation.test.ts  instructions.test.ts  mocks.ts
clients/py/: LICENSE  README.md  optional-requirements.txt  requirements.txt
clients/py/bot/: rebalance.py
clients/py/stake/: actions.py  constants.py
clients/py/stake_pool/: actions.py  constants.py  instructions.py  state.py
clients/py/system/: actions.py
clients/py/tests/: conftest.py  test_a_time_sensitive.py  test_add_remove.py  test_bot_rebalance.py  test_create.py  test_create_update_token_metadata.py  test_deposit_withdraw_sol.py  test_deposit_withdraw_stake.py  test_system.py  test_token.py  test_vote.py
clients/py/tpl_token/: actions.py
clients/py/vote/: actions.py
program/: Cargo.toml
program/src/: big_vec.rs  entrypoint.rs  error.rs  inline_mpl_token_metadata.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: create_pool_token_metadata.rs  decrease.rs  deposit.rs  deposit_authority.rs  deposit_edge_cases.rs  deposit_sol.rs  force_destake.rs  huge_pool.rs  increase.rs  initialize.rs  preferred_validators.rs  set_deposit_fee.rs  set_epoch_fee.rs  set_funding_authority.rs  set_manager.rs  set_preferred.rs  set_referral_fee.rs  set_staker.rs  set_withdrawal_fee.rs  update_pool_token_metadata.rs  update_stake_pool_balance.rs  update_validator_list_balance.rs  vsa_add.rs  vsa_remove.rs  withdraw.rs  withdraw_edge_cases.rs  withdraw_sol.rs  withdraw_with_fee.rs
program/tests/helpers/: mod.rs
scripts/: restart-test-validator.sh
